tests/ui/imports/import-crate-var.stderr
error: `$crate` may not be imported
  --> $DIR/auxiliary/import_crate_var.rs:5:5
   |
LL | macro_rules! m { () => {
   | -------------- in this expansion of `m!`
LL |     use $crate;
   |     ^^^^^^^^^^^
   |
  ::: $DIR/import-crate-var.rs:6:5
   |
LL |     m!();
   |     ---- in this macro invocation

error: aborting due to previous error

